# xHousing

./: .gitignore  Cargo.toml  Pitch.key  README.md  coverage.sh
contracts/coinbase/: Cargo.toml  sc-config.toml
contracts/coinbase/meta/: Cargo.toml
contracts/coinbase/meta/src/: main.rs
contracts/coinbase/src/: coinbase.rs  coinbase_proxy.rs  x_housing_interactions.rs  x_project_funding_interactions.rs
contracts/coinbase/tests/: blockchain.rs  check_attr_tests.rs  coinbase_black_box_test.rs
contracts/coinbase/wasm/: Cargo.toml
contracts/coinbase/wasm/src/: lib.rs
contracts/x-housing/: Cargo.toml  sc-config.toml
contracts/x-housing/meta/: Cargo.toml
contracts/x-housing/meta/src/: main.rs
contracts/x-housing/scenarios/: x_housing.scen.json
contracts/x-housing/src/: coinbase_interaction.rs  x_housing.rs  x_housing_proxy.rs
contracts/x-housing/src/distribution/: data.rs  mod.rs
contracts/x-housing/src/permission/: mod.rs  permissions.rs
contracts/x-housing/src/staking/: mod.rs
contracts/x-housing/src/users/: data.rs  mod.rs
contracts/x-housing/tests/: x_housing_blackbox_test.rs  x_housing_scenario_go_test.rs  x_housing_scenario_rs_test.rs
contracts/x-housing/wasm/: Cargo.toml
contracts/x-housing/wasm/src/: lib.rs
contracts/x-project/: Cargo.toml  sc-config.toml
contracts/x-project-funding/: Cargo.toml  sc-config.toml
contracts/x-project-funding/meta/: Cargo.toml
contracts/x-project-funding/meta/src/: main.rs
contracts/x-project-funding/src/: data.rs  x_project_funding.rs  x_project_funding_proxy.rs
contracts/x-project-funding/src/x_project_storage/: data.rs  mod.rs
contracts/x-project-funding/wasm/: Cargo.toml
contracts/x-project-funding/wasm/src/: lib.rs
contracts/x-project/meta/: Cargo.toml
contracts/x-project/meta/src/: main.rs
contracts/x-project/src/: rents.rs  reward_sharing.rs  x_project.rs  x_project_proxy.rs
contracts/x-project/src/token/: attributes.rs  mod.rs
contracts/x-project/wasm/: Cargo.toml
contracts/x-project/wasm/src/: lib.rs
interact-rs/: .gitignore  Cargo.toml
interact-rs/src/: cli.rs  config.rs  constants.rs  helpers.rs  main.rs  state.rs
interact-rs/src/interact/: coinbase.rs  mod.rs  x_housing.rs  x_project.rs  x_project_funding.rs
interact-rs/src/types/: mod.rs  network_status.rs
rust-packages/coinbase-module/: Cargo.toml
rust-packages/coinbase-module/src/: lib.rs
rust-packages/lk-xht-module/: Cargo.toml
rust-packages/lk-xht-module/src/: lib.rs
rust-packages/x-housing-module/: Cargo.toml
rust-packages/x-housing-module/src/: lib.rs
rust-packages/x-housing-utils/: Cargo.toml
rust-packages/x-housing-utils/src/: helpers.rs  lib.rs  storage.rs  types.rs  xpt_attributes.rs
rust-packages/x-housing-utils/src/contracts_proxy/: coinbase_proxy.rs  mod.rs  x_housing_proxy.rs  x_project_funding_proxy.rs  x_project_proxy.rs
rust-packages/xht-module/: Cargo.toml
rust-packages/xht-module/src/: lib.rs
rust-packages/xht-module/src/economics/: emission.rs  mod.rs
rust-packages/xst-module/: Cargo.toml
rust-packages/xst-module/src/: lib.rs
x-housing-ui/: .eslintrc.json  .gitignore  next.config.mjs  package.json
x-housing-ui/src/: constants.ts  errors.ts
x-housing-ui/src/app/: index.tsx  layout.tsx
x-housing-ui/src/app/@auth/: layout.tsx
x-housing-ui/src/app/@auth/components/: AuthRedirectWrapper.tsx
x-housing-ui/src/app/@auth/unlock/: index.tsx  page.tsx
x-housing-ui/src/app/@user/: layout.tsx
x-housing-ui/src/app/@user/components/: AccountMenu.tsx  AppDownload.tsx  BlogSummary.tsx  EcosystemTransactions.tsx  ElementWrapper.tsx  LoggedUserInfo.tsx  MainMenu.tsx  MobileMenu.tsx  PortfolioBalance.tsx  PortfolioDistribution.tsx  PortfolioValue.tsx  QuickSwap.tsx  ReferralCard.tsx  Referrals.tsx  RentDividends.tsx  Sidebar.tsx  TopBar.tsx  UserAvatar.tsx  UserEcosystemTransactions.tsx  (+1 more)
x-housing-ui/src/components/: BlockiesImage.tsx  BootstrapClient.ts  index.ts
x-housing-ui/src/config/: config.devnet.ts  config.localnet.ts  config.mainnet.ts  config.testnet.ts
x-housing-ui/src/contracts/: index.ts
x-housing-ui/src/contracts/coinbase/: coinbase.abi.json  hooks.ts  index.ts
x-housing-ui/src/contracts/xHousing/: index.ts  x-housing.abi.json
x-housing-ui/src/contracts/xProject/: hooks.ts  index.ts  x-project.abi.json
x-housing-ui/src/contracts/xProjectFunding/: hooks.ts  index.ts  x-project-funding.abi.json
x-housing-ui/src/hooks/: index.ts  sdkDappHooks.ts  useGlobalData.ts  useWindowResize.ts
x-housing-ui/src/providers/: apiProvider.ts  proxyProvider.ts
x-housing-ui/src/storage/: session.ts
x-housing-ui/src/styles/: _animations.scss  _app_email.scss  _chat.scss  _customizer.scss  _ecommerce.scss  _elements.scss  _fancy_selector.scss  _full_chat.scss  _layout.scss  _menu.scss  _onboarding.scss  _os_dropdowns.scss  _osfont.scss  _pipelines.scss  _plugin-overrides.scss  _pricing_plans.scss  _projects.scss  _rentals.scss  _responsive.scss  _scheme_dark.scss  _search.scss  _support.scss  _theme-mixins.scss  _theme-variables.scss  _todo.scss  _top_bar.scss  _user_profile.scss  _utilities.scss  global.scss
x-housing-ui/src/styles/bootstrap-override/: _badge.scss  _bootstrap.scss  _breadcrumb.scss  _buttons.scss  _forms.scss  _modal.scss  _nav.scss  _popover.scss  _tables.scss  _type.scss  _variables.scss
x-housing-ui/src/styles/user-override/: _user-styles.scss  _user-variables.scss
x-housing-ui/src/types/: index.ts
x-housing-ui/src/utils/: binary.utils.ts  index.ts  routes.ts  sdkDappUtils.ts  signAndSendTransactions.ts
x-housing-ui/src/utils/operations/: index.ts  prettyFormatAmount.ts
(+6 files in other folders)
