[workspace]

resolver = "2"

members = [
    "contracts/x-housing",
    "contracts/coinbase",
    "contracts/x-project-funding",
    "contracts/x-project",
    "rust-packages/x-housing-utils",
    "rust-packages/xht-module",
    "rust-packages/lk-xht-module",
    "rust-packages/coinbase-module",
    "rust-packages/x-housing-module",
]
