[package]
name = "interact-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.1.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.2"
hex = "0.4"
base64 = "0.13.0"
serde_json = "1.0"
num-bigint = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0.44"

[dependencies.utils]
package = "x-housing-utils"
path = "../rust-packages/x-housing-utils"


[dependencies.multiversx-sc-snippets]
version = "0.50.1"

[dependencies.multiversx-sc]
version = "0.50.1"
