[package]
name = "coinbase"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/coinbase.rs"

[dependencies.multiversx-sc]
version = "=0.50.1"

[dependencies.xht]
package = "xht-module"
path = "../../rust-packages/xht-module"

[dependencies.x-housing]
path = "../x-housing"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.50.1"