[package]
name = "x-housing"
version = "0.0.0"
authors = ["Levi Chimezie levi@techypharm.com"]
edition = "2021"
publish = false

[lib]
path = "src/x_housing.rs"

[dependencies.multiversx-sc]
version = "0.50.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.50.1"
