[package]
name = "x-housing"
version = "0.0.0"
authors = ["Levi Chimezie levi@techypharm.com"]
edition = "2021"
publish = false

[lib]
path = "src/x_housing.rs"

[dependencies.multiversx-sc]
version = "=0.50.1"

[dependencies.multiversx-sc-modules]
version = "=0.50.1"

[dependencies.utils]
package = "x-housing-utils"
path = "../../rust-packages/x-housing-utils"

[dependencies.coinbase-module]
path = "../../rust-packages/coinbase-module"

[dependencies.xht]
package = "xht-module"
path = "../../rust-packages/xht-module"

[dependencies.xst]
package = "xst-module"
path = "../../rust-packages/xst-module"

[dependencies]
bitflags = "2.4.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.50.1"
