[package]
name = "x-project-funding"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/x_project_funding.rs"

[dependencies.multiversx-sc]
version = "=0.50.1"

[dependencies.coinbase-module]
path = "../../rust-packages/coinbase-module"

[dependencies.xht]
package = "xht-module"
path = "../../rust-packages/xht-module"

[dependencies.x-project]
path = "../x-project"

[dependencies.x-housing-module]
path = "../../rust-packages/x-housing-module"

[dependencies.utils]
package = "x-housing-utils"
path = "../../rust-packages/x-housing-utils"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.50.1"
