[package]
name = "x-project"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/x_project.rs"

[dependencies.multiversx-sc]
version = "=0.50.1"

[dependencies.multiversx-sc-modules]
version = "0.50.1"

[dependencies.xht]
package = "xht-module"
path = "../../rust-packages/xht-module"

[dependencies.utils]
package = "x-housing-utils"
path = "../../rust-packages/x-housing-utils"

[dependencies.x-housing-module]
path = "../../rust-packages/x-housing-module"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.50.1"
